# Panopticon

./: .env.example  .gitignore  CLAUDE.md  PROBLEMS.md  README.md  docker-compose.yml
api/: .env.example  Cargo.toml  Dockerfile  Dockerfile.scheduler
api/.sqlx/: query-01752e3e3fb8dcc51cd5389f48d61ab67061533c39f91eaa96de2f180fdbcf55.json  query-07918bcc396ba495270105d2c503cf7264e531d0260935913b6206a302a6a5cd.json  query-08cede44494872a28bc6cc4b988ea62767cd7563444efc80228bc5732237ad75.json  query-0dbc8b32788cb0a55276d094dd5684caf830bdcafb78d9ab9accdd99381443bb.json  query-22e47a36d2063e31a32c80751abb5f5f05e8c9fce3793185c55c8bbbaa9150fc.json  query-2beafc40c0ecc7203c1593bfa166cff0ceb7e620fdfec6fa4ab9089588d71799.json  query-36f3e047ba22e12a37213cac70ad52823bfe21a8f19b22608c788a5827fa96b6.json  query-381a46dc9fe4bbbb2c3584493b51235decde9cfb2c189430d337362725918ece.json  query-3b2ab94625a75409644e2105341a562f50608105c39c720e14722e75d172b674.json  query-44ff383c5dee8c1f8c324ca6a4ce94fb8d1f2ef33c32eb756e1529ef5a2462f4.json  query-52ff1839bdcfdd7d56cbd98529e595f8bc7075a345f49cc249ae8a41fa5cdafb.json  query-5aaf6bd34e12ace71eca0d981332246eeef32ee5ae33b567faee42bdf853972e.json  query-61e78c4d2667bd2c237e3b21d39278ce4b60e4a6170657f57cc8b9761398dfae.json  query-63da41b68360a395b3ea099abe893e777fc1aca243939a81dc611469671d9cf8.json  query-66847c26e2bbaf25fcbd14f207dc776a345d09c98bee9e20ac9df59396763e34.json  query-6b7fcf6d7a09fbf14fb85612715af25b5a6933e14f16e88e31812c949fa3c73f.json  query-8322f8b784f878c9d6ecb79f2b009d5bf59caf238aed9481c4421850102d6018.json  (+20 more)
api/src/: config.rs  (+5 more)
(+48 files in other folders)
