[package]
name = "panopticon-api"
version = "0.1.0"
edition = "2021"

default-run = "panopticon-api"

[[bin]]
name = "panopticon-api"
path = "src/main.rs"

[[bin]]
name = "scheduler"
path = "src/bin/scheduler.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "uuid",
    "migrate",
    "json",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.9", features = ["serde"] }
time = "0.3"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# HTTP client (for Google OAuth userinfo)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# OAuth2
oauth2 = "4"

# Environment
dotenvy = "0.15"

# Random (CSRF state tokens)
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
